# lead_sumaria

./: .gitignore  README.md  agendamento.db  apagar.py  apagar.txt  db.json  main.py  pyproject.toml  response.html  template_jogadores.json  template_sem_var.json
sumula/: proximas_partidas.py
sumula/api/app/: main.py
sumula/api/app/config/: db.py
sumula/api/app/routers/: __init__.py  middleware_logs.py  sumula_routers.py
sumula/api/config/: config.py  db.py
sumula/api/controller/: sumula_controle.py
sumula/api/domain/: crud.py  model.py
sumula/api/domain/repositories/: agendamento.py  auth_repository.py  logs_repository.py  sumula.py  sumula_repository.py
sumula/api/providers/: auth.py
sumula/assets/templates/: maior_template.json
sumula/download/: pdf_downloader.py
sumula/entities/: entities.py
sumula/etc/: file_handler.py
sumula/extract_text/: clear_text.py  extract_text.py  pdf_handler.py
sumula/logger/: __init__.py  logger.py
tests/: conftest.py  test_extrair_dados_arbitragem.py  test_extrair_dados_cartao_amarelo.py  test_extrair_dados_comissao_tecnica.py  test_extrair_dados_cronologia.py  test_extrair_dados_gols.py  test_extrair_dados_jogadores.py  test_extrair_dados_partida.py  test_integracao.py
